Fix font size on small screen

--- a/mapping/styles.css
+++ b/mapping/styles.css
@@ -2,6 +2,7 @@ body {
     margin: 0;
     padding: 0;
     touch-action: none;
+    overflow: hidden;
 }
 
 #mapcanvas {
@@ -12,7 +13,7 @@ body {
     position: absolute;
     top: 10%;
     right: 10px;
-    width: 2px;
+    width: 0.5%;
     height: 80%;
     border: 2px solid black;
     background-color: white;
@@ -23,6 +24,11 @@ body {
     position: absolute;
     top: 50%;
     right: 0px;
-    font-size: 3vh;
     background-color: white;
+}
+
+@media (max-height: 500px) {
+    #scalevalue {
+        font-size: 2rem;
+    }
 }
